--- a/contact-us.html
+++ b/contact-us.html
@@ -34,16 +34,16 @@
                 <div class="container">
                     <!-- Logo -->
                     <!-- <div class="logo_area"> -->
-                    <a class="nav-brand" href="index.html"><img src="img/home/logo-white.png" alt=""></a>
+                    <a class="nav-brand" href="main.html"><img src="img/home/logo-white.png" alt=""></a>
                     <!-- </div> -->
 
                     <!-- Menu -->
                     <div class="inner_menu">
                         <ul>
-                            <li class="active"><a href="index.html">Home</a></li>
+                            <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
                             <li><a href="process.html">Process</a></li>
-                            <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                            <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                             <li><a href="products.html">Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
@@ -67,10 +67,10 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
                                     <li><a href="process.html">Process</a></li>
-                                    <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                                    <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                                     <li><a href="products.html">Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
@@ -95,33 +95,48 @@
             <div class="row">
                 <div class="col-12 col-lg-12">
                     <div class="contact-head-text ">
-                        <h1>Contact</h1>
-                        <p>We are currently available at the following retail outlets;</p>
+                        <h1>Contact us</h1>
+                        <p class="mb-30 mt-15">We are currently available at the following retail outlets;</p>
                     </div>
 
                 </div>
             </div>
             <div class="row width-75 content-center">
                 <div class="col-12 col-md-4">
-                    <div class="img-blog-1 height-400"></div>
+                    <div class="img-blog-1 height-400">
+                        <div class="text-blog">
+                                King Power
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <div class="img-blog-2 height-400"></div>
+                    <div class="img-blog-2 height-400">
+                        <div class="text-blog">
+                                Central
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <div class="img-blog-3 height-400"></div>
+                    <div class="img-blog-3 height-400">
+                        <div class="text-blog">
+                                The Icon Siam
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row width-85 content-center  mb-50 mt-50">
                 <div class="col-12 col-md-6">
-                    <h3>&nbsp;&nbsp;&nbsp;- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Our Address</h3>
+                    <h4>&nbsp;&nbsp;&nbsp;- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Contact us for any requests 
+                        </h4>
                 </div>
                 <div class="col-12 col-md-6">
                     <ul>
-                        <li><i class="fa fa-map-marker mr-15" aria-hidden="true" ></i>1895 Deer Haven Drive. Greenville, SC ,
-                           spanSouth Carolina, 29601</li>
-                        <li><i class="fa fa-mobile mr-15" aria-hidden="true" ></i>091-212-1023</li>
-                        <li><i class="fa fa-send-o mr-15" aria-hidden="true" style="font-size:10px;"></i>contactusfordetails@malai.com</li>
+                        <li><i class="fa fa-map-marker mr-15" aria-hidden="true" ></i>Lamai Distilleries Company Limited
+                            607 Moo 2 Kangann Prasart
+                            Surin 32140
+                            Thailand</li>
+                        <li><i class="fa fa-mobile mr-15" aria-hidden="true" ></i>+66819391954 , +66982580299</li>
+                        <li><i class="fa fa-send-o mr-15" aria-hidden="true" style="font-size:10px;"></i>info@lamaithaispirits.com</li>
                     </ul>
                 </div>
             </div>
@@ -129,10 +144,11 @@
 
     </section>
 
-    <section class="height-400 mt-400 mb-50 mb-no-margin">
-        <iframe
+    <section class="height-400 mt-450 mb-50 mb-no-margin">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15441.239714134617!2d103.39728672319227!3d14.638340197726352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311a027fc8cc5247%3A0x6cf0a5a3f76c23dc!2z4Lir4Lih4Li54LmIIDIg4LiV4Liz4Lia4LilIOC4geC4seC4h-C5geC4reC4mSDguK3guLPguYDguKDguK0g4Lib4Lij4Liy4Liq4Liy4LiXIOC4quC4uOC4o-C4tOC4meC4l-C4o-C5jCAzMjE0MA!5e0!3m2!1sth!2sth!4v1557749322582!5m2!1sth!2sth" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!-- <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17510.058160672714!2d100.59245856490416!3d13.577851754302761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a7400049e9ad%3A0x1d053ba3e55bf965!2z4Lif4Liy4Lij4LmM4Lih4LiI4Lij4Liw4LmA4LiC4LmJ4LmB4Lil4Liw4Liq4Lin4LiZ4Liq4Lix4LiV4Lin4LmMIOC4quC4oeC4uOC4l-C4o-C4m-C4o-C4suC4geC4suC4ow!5e0!3m2!1sth!2sth!4v1553427682059"
-            width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+            width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe> -->
     </section>
     <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area ">
