--- a/our-story.html
+++ b/our-story.html
@@ -29,16 +29,16 @@
                 <div class="container">
                     <!-- Logo -->
                     <!-- <div class="logo_area"> -->
-                    <a class="nav-brand" href="index.html"><img src="img/home/logo-white.png" alt=""></a>
+                    <a class="nav-brand" href="main.html"><img src="img/home/logo-white.png" alt=""></a>
                     <!-- </div> -->
 
                     <!-- Menu -->
                     <div class="inner_menu">
                         <ul>
-                            <li class="active"><a href="index.html">Home</a></li>
+                            <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
                             <li><a href="process.html">Process</a></li>
-                            <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                            <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                             <li><a href="products.html">Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
@@ -62,20 +62,14 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
                                     <li><a href="process.html">Process</a></li>
-                                    <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                                    <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                                     <li><a href="products.html">Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
-
-                                <!-- Newsletter Form -->
-                                <!-- <div class="search-btn">
-                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                </div> -->
-
                             </div>
                             <!-- Nav End -->
                         </div>
@@ -92,7 +86,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="out-story-head-text ">
                         <h1>Our Story</h1>
-                        <h3>About Lamai</h3>
+                        <h3>Our Story</h3>
                         <div class="text-detail">
                             <p>At Lamai Distilleries, we personally ensure that all our products are farm to flask.</p>
                             <br>
@@ -108,10 +102,13 @@
                 </div>
             </div>
         </div>
-
+        <div>
+            <img src="img/out-story/img-2.png" alt="">
+        </div>
+       
     </section>
-    <section class="out-story-img-bg"></section>
-    <section class="out-story-area-content section-padding-80">
+    <!-- <section class="out-story-img-bg"></section> -->
+    <section class="out-story-area-content padb-40 more-full-height-100 more-full-pad mb-padt-40">
         <div class="container">
             <p>Lamai Distilleries operates under a local community distillery license in the province of Surin, in the
                 Northeastern part of Thailand. As such, we are a small operation where we are personally responsible for
