--- a/products.html
+++ b/products.html
@@ -33,16 +33,16 @@
                 <div class="container">
                     <!-- Logo -->
                     <!-- <div class="logo_area"> -->
-                    <a class="nav-brand" href="index.html"><img src="img/home/logo-white.png" alt=""></a>
+                    <a class="nav-brand" href="main.html"><img src="img/home/logo-white.png" alt=""></a>
                     <!-- </div> -->
 
                     <!-- Menu -->
                     <div class="inner_menu">
                         <ul>
-                            <li class="active"><a href="index.html">Home</a></li>
+                            <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
                             <li><a href="process.html">Process</a></li>
-                            <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                            <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                             <li><a href="products.html">Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
@@ -66,10 +66,10 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
                                     <li><a href="process.html">Process</a></li>
-                                    <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                                    <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                                     <li><a href="products.html">Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-12 col-lg-12">
                     <div class="product-head-text text-center">
-                        <h1>Our Products</h1>
+                        <h1>The Products</h1>
                     </div>
                 </div>
             </div>
@@ -105,12 +105,12 @@
                     <div class="img-product mb-product-bg1">
                         <img class="hide-on-mb" src="img/product/img-1.png" alt="">
                     </div>
-                    <div class="product-discreption">
-                        <h4>- Coconut Lamai</h4>
-                        <p>Lorem ipsum dolor sit us asm amet, consectetur adipiscing elit.</p>
+                    <div class="product-discreption mb-23">
+                        <h4>- Malai</h4>
+                        <p>Savory and aromatic sugarcane spirit perfect with cocktails (travel-size)</p>
                     </div>
-                    <div class="button-detail-content">
-                        <a  href="product-detail.html" class="btn">More Details</a>
+                    <div class="button-detail-content mt-0">
+                        <a  href="malai-product-detail.html" class="btn">More Details</a>
                     </div>
                 </div>
             </div>
@@ -120,11 +120,11 @@
                         <img class="hide-on-mb" src="img/product/img-2.png" alt="">
                     </div>
                     <div class="product-discreption">
-                        <h4>- Chatai Lamai</h4>
-                        <p>Lorem ipsum dolor sit us asm amet, consectetur adipiscing elit.</p>
+                        <h4>- Cha Thai</h4>
+                        <p>Unique Thai tea flavored spirit that goes great on its own</p>
                     </div>
                     <div class="button-detail-content">
-                        <a href="product-detail.html" class="btn">More Details</a>
+                        <a href="chathai-product-detail.html" class="btn">More Details</a>
                     </div>
                 </div>
             </div>
@@ -134,23 +134,23 @@
                         <img class="hide-on-mb" src="img/product/img-3.png" alt="">
                     </div>
                     <div class="product-discreption">
-                        <h4>- Signature Lamai</h4>
-                        <p>Lorem ipsum dolor sit us asm amet, consectetur adipiscing elit.</p>
+                        <h4>- Coconut</h4>
+                        <p>Coconut infused sugarcane spirit for a tropical mood</p>
                     </div>
                     <div class="button-detail-content">
-                        <a href="product-detail.html" class="btn">More Details</a>
+                        <a href="coconut-product-detail.html" class="btn">More Details</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-3 col-lg-3">
                 <div class="list-product">
                     <div class="img-product product-bg"></div>
-                    <div class="product-discreption">
-                        <h4>- Signature Lamai</h4>
-                        <p>Lorem ipsum dolor sit us asm amet, consectetur adipiscing elit.</p>
+                    <div class="product-discreption mb-23" >
+                        <h4>- Malai</h4>
+                        <p>Savory and aromatic sugarcane spirit perfect with cocktails (bar-size)</p>
                     </div>
-                    <div class="button-detail-content">
-                        <a href="product-detail.html" class="btn">More Details</a>
+                    <div class="button-detail-content mt-0">
+                        <a href="malai-big-product-detail.html" class="btn">More Details</a>
                     </div>
 
                 </div>
