--- a/craft-services.html
+++ b/craft-services.html
@@ -33,16 +33,16 @@
                 <div class="container">
                     <!-- Logo -->
                     <!-- <div class="logo_area"> -->
-                    <a class="nav-brand" href="index.html"><img src="img/home/logo-white.png" alt=""></a>
+                    <a class="nav-brand" href="main.html"><img src="img/home/logo-white.png" alt=""></a>
                     <!-- </div> -->
 
                     <!-- Menu -->
                     <div class="inner_menu">
                         <ul>
-                            <li class="active"><a href="index.html">Home</a></li>
+                            <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
                             <li><a href="process.html">Process</a></li>
-                            <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                            <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                             <li><a href="products.html">Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
@@ -66,10 +66,10 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
                                     <li><a href="process.html">Process</a></li>
-                                    <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                                    <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                                     <li><a href="products.html">Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
@@ -105,9 +105,7 @@
     <section class="craft-area-content padt-500 mb-padt-50 mb-50 have-logo-bg-right">
         <div class="container">
             <div class="width-60 centet-content mb-full-width">
-                <p>Our passion for distilling does not stop at just our products, we also provide Craft Services to
-                    those that want a private label spirit. While we request clients to provide us with their bottle and
-                    artwork, we proactively work towards creating a spirit that is distinctive. </p>
+                <p>Our passion for developing exciting products is available for your craft needs. Although we have certain volume requirements, we are always happy to create new products that fit your vision. While we are now allowed to make any dark spirits, we can make all white spirits at 40% and liqueurs at 15% and below. </p>
 
             </div>
         </div>
@@ -148,7 +146,7 @@
                     </div>
                     <div class="col-12 col-md-6 ">
                         <div class="text-content width-60 mb-full-width ">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                            <p>Some of our craft products can be seen below.</p>
                         </div>
                     </div>
                 </div>
