--- a/process.html
+++ b/process.html
@@ -33,16 +33,16 @@
                 <div class="container">
                     <!-- Logo -->
                     <!-- <div class="logo_area"> -->
-                    <a class="nav-brand" href="index.html"><img src="img/home/logo-white.png" alt=""></a>
+                    <a class="nav-brand" href="main.html"><img src="img/home/logo-white.png" alt=""></a>
                     <!-- </div> -->
 
                     <!-- Menu -->
                     <div class="inner_menu">
                         <ul>
-                            <li class="active"><a href="index.html">Home</a></li>
+                            <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
                             <li><a href="process.html">Process</a></li>
-                            <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                            <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                             <li><a href="products.html">Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
@@ -66,10 +66,10 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
                                     <li><a href="process.html">Process</a></li>
-                                    <!-- <li> <a href="index.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
+                                    <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
                                     <li><a href="products.html">Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-12 col-lg-12">
                     <div class="process-head-text">
-                        <h1>Process</h1>
+                        <h1>The Process</h1>
                     </div>
                 </div>
             </div>
