--- a/contact-us.html
+++ b/contact-us.html
@@ -12,7 +12,7 @@
     <title>Lamai - Blog Template | Contact</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <!-- <link rel="icon" href="img/core-img/favicon.ico"> -->
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
     <!-- Preloader -->
     <div id="preloader">
         <i class="circle-preloader"></i>
-        <img src="img/core-img/salad.png" alt="">
+        <img src="img/home/logo.png" alt="">
     </div>
     <!-- ##### Header Area Start ##### -->
     <header class="header-area mb-h-125">
@@ -42,9 +42,9 @@
                         <ul>
                             <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
-                            <li><a href="process.html">Process</a></li>
+                            <li><a href="process.html">The Process</a></li>
                             <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
-                            <li><a href="products.html">Products</a></li>
+                            <li><a href="products.html">The Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
@@ -69,9 +69,9 @@
                                 <ul>
                                     <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
-                                    <li><a href="process.html">Process</a></li>
+                                    <li><a href="process.html">The Process</a></li>
                                     <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
-                                    <li><a href="products.html">Products</a></li>
+                                    <li><a href="products.html">The Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
@@ -145,7 +145,10 @@
     </section>
 
     <section class="height-400 mt-450 mb-50 mb-no-margin">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15441.239714134617!2d103.39728672319227!3d14.638340197726352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311a027fc8cc5247%3A0x6cf0a5a3f76c23dc!2z4Lir4Lih4Li54LmIIDIg4LiV4Liz4Lia4LilIOC4geC4seC4h-C5geC4reC4mSDguK3guLPguYDguKDguK0g4Lib4Lij4Liy4Liq4Liy4LiXIOC4quC4uOC4o-C4tOC4meC4l-C4o-C5jCAzMjE0MA!5e0!3m2!1sth!2sth!4v1557749322582!5m2!1sth!2sth" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15441.239714134617!2d103.39728672319227!3d14.638340197726352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311a027fc8cc5247%3A0x6cf0a5a3f76c23dc!2z4Lir4Lih4Li54LmIIDIg4LiV4Liz4Lia4LilIOC4geC4seC4h-C5geC4reC4mSDguK3guLPguYDguKDguK0g4Lib4Lij4Liy4Liq4Liy4LiXIOC4quC4uOC4o-C4tOC4meC4l-C4o-C5jCAzMjE0MA!5e0!3m2!1sth!2sth!4v1557749322582!5m2!1sth!2sth" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+            
         <!-- <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17510.058160672714!2d100.59245856490416!3d13.577851754302761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a7400049e9ad%3A0x1d053ba3e55bf965!2z4Lif4Liy4Lij4LmM4Lih4LiI4Lij4Liw4LmA4LiC4LmJ4LmB4Lil4Liw4Liq4Lin4LiZ4Liq4Lix4LiV4Lin4LmMIOC4quC4oeC4uOC4l-C4o-C4m-C4o-C4suC4geC4suC4ow!5e0!3m2!1sth!2sth!4v1553427682059"
             width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe> -->
@@ -159,14 +162,14 @@
                 </div>
             </div>
             <div class="foot-menu">
-                <ul class="list-foot-menu">
-                    <li><a href="">Our Story</a></li>
-                    <li><a href="">Process</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">product Services</a></li>
-                    <li><a href="">Contact Us</a></li>
-                </ul>
-            </div>
+                    <ul class="list-foot-menu">
+                        <li><a href="our-story.html">Our Story</a></li>
+                        <li><a href="process.html">Process</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="craft-services.html">Craft Services</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
+                    </ul>
+                </div>
         </div>
         <div class="footer-copyright-area text-center">
             <p>© 2018 Company Details All Rights Reserved.</p>
