--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Delicious - Food Blog Template | Home</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <!-- <link rel="icon" href="img/core-img/favicon.ico"> -->
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -23,17 +23,17 @@
     <!-- Preloader -->
     <div id="preloader">
         <i class="circle-preloader"></i>
-        <img src="img/core-img/salad.png" alt="">
+       <img src="img/home/logo.png" alt="">
     </div>
     <section class="main-home-detail">
         <div class="logo">
             <img src="img/home/logo-white.png" alt="">
         </div>
         <div class="detail">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</p>
+            <p>Drinking is for adults. Please confirm that you are one. Be responsible.</p>
             <h4>Are you 21 years old?</h4>
             <div class="detail-butoon ">
-                <a href="#" class="main-btn btn-5">No</a>
+                <a href="https://www.google.com"  class="main-btn btn-5">No</a>
                 <a href="main.html" class="main-btn btn-5">Yes</a>
             </div>
         </div>
@@ -52,6 +52,7 @@
    
     <!-- Active js -->
     <script src="js/active.js"></script>
+   
 </body>
 
 </html>
