--- a/process.html
+++ b/process.html
@@ -12,7 +12,7 @@
     <title>Lamai - Blog Template | Process</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <!-- <link rel="icon" href="img/core-img/favicon.ico"> -->
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -22,9 +22,9 @@
 <body>
     <!-- Preloader -->
     <div id="preloader">
-        <i class="circle-preloader"></i>
-        <img src="img/core-img/salad.png" alt="">
-    </div>
+            <i class="circle-preloader"></i>
+            <img src="img/home/logo.png" alt="">
+        </div>
     <!-- ##### Header Area Start ##### -->
     <header class="header-area mb-h-125">
         <!-- Navbar Area -->
@@ -41,9 +41,9 @@
                         <ul>
                             <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
-                            <li><a href="process.html">Process</a></li>
+                            <li><a href="process.html">The Process</a></li>
                             <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
-                            <li><a href="products.html">Products</a></li>
+                            <li><a href="products.html">The Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
@@ -68,9 +68,9 @@
                                 <ul>
                                     <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
-                                    <li><a href="process.html">Process</a></li>
+                                    <li><a href="process.html">The Process</a></li>
                                     <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
-                                    <li><a href="products.html">Products</a></li>
+                                    <li><a href="products.html">The Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
@@ -104,7 +104,7 @@
     </section>
     <section class="process-area-content padt-500 mb-padt-50 have-logo-bg-right">
         <div class="container">
-            <div class="width-60  mb-full-width centet-content mb-padb-50 ">
+            <div class="  mb-full-width centet-content mb-padb-50 mb-50">
                 <p>For all our raw materials, we try to ensure that it is sourced 100% within the province directly from
                     local farmer cooperatives. We also believe in creating a sustainable ecosystem with our
                     stakeholders. </p>
@@ -117,7 +117,7 @@
     </section>
     <section class="process-area-content mt-50 have-logo-bg-left">
         <div class="container">
-            <div class="width-60 mb-full-width centet-content mb-50">
+            <div class="mb-full-width centet-content mb-50">
                 <p class="mb-15">Our distillation columns are nothing fancy but coupled with our attention to detail, they are engineered to produce spirits that bring out the flavors of the environment from which we select our ingredients. All our spirits are pure “hearts”, only the best part of any distillation. We discard the “heads” and “tails” </p>
                 <p class="mb-15">The main ingredient in all our spirits is our water. Extracted from under the ground of our distillery and treated via Reverse Osmosis, the water is slowly and gently added to our spirits so that the alcohol molecules do not go into shock and create any off-flavors.</p>
                 <p class="mb-15">At the heart of our products is our design. Heavily inspired by Thai art, each of our products reflect the charm of Thailand. Some of our illustrations are the creative fruits of local artists.</p>
