--- a/our-story.html
+++ b/our-story.html
@@ -10,7 +10,7 @@
     <!-- Title -->
     <title>Lamai - Blog Template | Our Story</title>
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <!-- <link rel="icon" href="img/core-img/favicon.ico"> -->
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,7 +19,7 @@
     <!-- Preloader -->
     <div id="preloader">
         <i class="circle-preloader"></i>
-        <img src="img/core-img/salad.png" alt="">
+       <img src="img/home/logo.png" alt="">
     </div>
     <!-- ##### Header Area Start ##### -->
     <header class="header-area mb-h-125">
@@ -37,9 +37,9 @@
                         <ul>
                             <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
-                            <li><a href="process.html">Process</a></li>
+                            <li><a href="process.html">The Process</a></li>
                             <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
-                            <li><a href="products.html">Products</a></li>
+                            <li><a href="products.html">The Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
@@ -64,9 +64,9 @@
                                 <ul>
                                     <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
-                                    <li><a href="process.html">Process</a></li>
+                                    <li><a href="process.html">The Process</a></li>
                                     <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
-                                    <li><a href="products.html">Products</a></li>
+                                    <li><a href="products.html">The Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
@@ -147,14 +147,14 @@
                 </div>
             </div>
             <div class="foot-menu">
-                <ul class="list-foot-menu">
-                    <li><a href="">Our Story</a></li>
-                    <li><a href="">Process</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">Craft Services</a></li>
-                    <li><a href="">Contact Us</a></li>
-                </ul>
-            </div>
+                    <ul class="list-foot-menu">
+                        <li><a href="our-story.html">Our Story</a></li>
+                        <li><a href="process.html">Process</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="craft-services.html">Craft Services</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
+                    </ul>
+                </div>
         </div>
         <div class="footer-copyright-area text-center">
             <p>© 2018 Company Details All Rights Reserved.</p>
