--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
     <title>Lamai - Blog Template | Process</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <!-- <link rel="icon" href="img/core-img/favicon.ico"> -->
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -23,7 +23,7 @@
     <!-- Preloader -->
     <div id="preloader">
         <i class="circle-preloader"></i>
-        <img src="img/core-img/salad.png" alt="">
+       <img src="img/home/logo.png" alt="">
     </div>
     <!-- ##### Header Area Start ##### -->
     <header class="header-area mb-h-125">
@@ -41,9 +41,9 @@
                         <ul>
                             <li class="active"><a href="main.html">Home</a></li>
                             <li><a href="our-story.html">Our Story</a></li>
-                            <li><a href="process.html">Process</a></li>
+                            <li><a href="process.html">The Process</a></li>
                             <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
-                            <li><a href="products.html">Products</a></li>
+                            <li><a href="products.html">The Products</a></li>
                             <li><a href="craft-services.html">Craft Services</a></li>
                             <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
@@ -68,9 +68,9 @@
                                 <ul>
                                     <li class="active"><a href="main.html">Home</a></li>
                                     <li><a href="our-story.html">Our Story</a></li>
-                                    <li><a href="process.html">Process</a></li>
+                                    <li><a href="process.html">The Process</a></li>
                                     <!-- <li> <a href="main.html"><img src="img/home/logo-white.png" alt=""></a></li> -->
-                                    <li><a href="products.html">Products</a></li>
+                                    <li><a href="products.html">The Products</a></li>
                                     <li><a href="craft-services.html">Craft Services</a></li>
                                     <li><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
@@ -107,7 +107,8 @@
                     </div>
                     <div class="product-discreption mb-23">
                         <h4>- Malai</h4>
-                        <p>Savory and aromatic sugarcane spirit perfect with cocktails (travel-size)</p>
+                        <p>Savory and aromatic sugarcane spirit perfect with cocktails </p>
+                        <p>(travel-size)</p>
                     </div>
                     <div class="button-detail-content mt-0">
                         <a  href="malai-product-detail.html" class="btn">More Details</a>
@@ -147,7 +148,9 @@
                     <div class="img-product product-bg"></div>
                     <div class="product-discreption mb-23" >
                         <h4>- Malai</h4>
-                        <p>Savory and aromatic sugarcane spirit perfect with cocktails (bar-size)</p>
+                        <p>Savory and aromatic sugarcane spirit perfect with cocktails </p>
+                        <p> (bar-size)</p>
+                       
                     </div>
                     <div class="button-detail-content mt-0">
                         <a href="malai-big-product-detail.html" class="btn">More Details</a>
