--- a/contact-us.html
+++ b/contact-us.html
@@ -126,7 +126,7 @@
             </div>
             <div class="row width-85 content-center  mb-50 mt-50">
                 <div class="col-12 col-md-6">
-                    <h4>&nbsp;&nbsp;&nbsp;- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Contact us for any requests 
+                    <h4 style="font-style: italic" >&nbsp;&nbsp;&nbsp;- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Contact us for any requests 
                         </h4>
                 </div>
                 <div class="col-12 col-md-6">
