--- a/malai-product-detail.html
+++ b/malai-product-detail.html
@@ -91,7 +91,7 @@
     </header>
     <section class="product-detail-area malai container lg-nopadLR ">
         <div class="product-detail-title">
-            <h1>- Malai</h1>
+            <h1>Malai</h1>
         </div>
 
     </section>
@@ -100,7 +100,7 @@
             <div class="width-80 mt-60 mb-no-margin mb-full-width centet-content ">
                 <div class="row">
                     <div class="col-12 col-md-3 text-right mb-left">
-                        <h3>- &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;Malai</h3>
+                        <h3 style="font-style: italic">- &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;Malai</h3>
                     </div>
                     <div class="col-12 col-md-9">
                         <p>Crafted from cane sugar, Malai is perfect for a variety of cocktails. While we are not allowed to call it a rum due to our distilling license, it is a white spirit from sugarcane perfectly complimenting mojitos.</p>
@@ -111,13 +111,13 @@
                 </div>
                 <div class="row width-75 mt-60 centet-content hide-on-mb">
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-1"></div>
+                        <div class="img-blog lamai-1"></div>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-2"></div>
+                        <div class="img-blog lamai-3"></div>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-3"></div>
+                        <div class="img-blog lamai-2"></div>
                     </div>
                 </div>
                 <div class="row width-50 centet-content mt-60">
