--- a/products.html
+++ b/products.html
@@ -106,7 +106,7 @@
                         <img class="hide-on-mb" src="img/product/img-1.png" alt="">
                     </div>
                     <div class="product-discreption mb-23">
-                        <h4>- Malai</h4>
+                        <h4>Malai</h4>
                         <p>Savory and aromatic sugarcane spirit perfect with cocktails </p>
                         <p>(travel-size)</p>
                     </div>
@@ -121,7 +121,7 @@
                         <img class="hide-on-mb" src="img/product/img-2.png" alt="">
                     </div>
                     <div class="product-discreption">
-                        <h4>- Cha Thai</h4>
+                        <h4>Cha Thai</h4>
                         <p>Unique Thai tea flavored spirit that goes great on its own</p>
                     </div>
                     <div class="button-detail-content">
@@ -135,7 +135,7 @@
                         <img class="hide-on-mb" src="img/product/img-3.png" alt="">
                     </div>
                     <div class="product-discreption">
-                        <h4>- Coconut</h4>
+                        <h4>Coconut</h4>
                         <p>Coconut infused sugarcane spirit for a tropical mood</p>
                     </div>
                     <div class="button-detail-content">
@@ -147,7 +147,7 @@
                 <div class="list-product">
                     <div class="img-product product-bg"></div>
                     <div class="product-discreption mb-23" >
-                        <h4>- Malai</h4>
+                        <h4>Malai</h4>
                         <p>Savory and aromatic sugarcane spirit perfect with cocktails </p>
                         <p> (bar-size)</p>
                        
