--- a/chathai-product-detail.html
+++ b/chathai-product-detail.html
@@ -100,7 +100,7 @@
             <div class="width-80 mt-60 mb-no-margin mb-full-width centet-content ">
                 <div class="row">
                     <div class="col-12 col-md-3 text-right mb-left">
-                        <h3>- &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;Cha Thai</h3>
+                        <h3 style="font-style: italic">- &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;Cha Thai</h3>
                     </div>
                     <div class="col-12 col-md-9">
                         <p>Using our sugarcane base spirit, we decided to add traditional Thai black tea leaves to make
@@ -113,13 +113,13 @@
                 </div>
                 <div class="row width-75 mt-60 centet-content hide-on-mb">
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-1"></div>
+                        <div class="img-blog cha-thai-1"></div>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-2"></div>
+                        <div class="img-blog cha-thai-2"></div>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-3"></div>
+                        <div class="img-blog cha-thai-3"></div>
                     </div>
                 </div>
                 <div class="row width-50 centet-content mt-60">
