--- a/coconut-product-detail.html
+++ b/coconut-product-detail.html
@@ -91,7 +91,7 @@
     </header>
     <section class="product-detail-area coconut container lg-nopadLR ">
         <div class="product-detail-title">
-            <h1>- Coconut</h1>
+            <h1>Coconut</h1>
         </div>
 
     </section>
@@ -100,7 +100,7 @@
             <div class="width-80 mt-60 mb-no-margin mb-full-width centet-content ">
                 <div class="row">
                     <div class="col-12 col-md-3 text-right mb-left">
-                        <h3>- &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;Coconut</h3>
+                        <h3 style="font-style: italic">- &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;Coconut</h3>
                     </div>
                     <div class="col-12 col-md-9">
                         <p>Thailand’s coconuts are well-known globally for their refreshing effect. We decided to use our sugarcane base along with pure coconut essence to make this flavored white spirit that is both sweet and refreshing.
@@ -108,17 +108,17 @@
                     </div>
                 </div>
                 <div class="product-detail-img text-center">
-                    <img src="img/product-detail/img-2.png" alt="">
+                    <img class="coco-main-img"src="img/product-detail/coconut/coco-3.png" alt="" >
                 </div>
                 <div class="row width-75 mt-60 centet-content hide-on-mb">
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-1"></div>
+                        <div class="img-blog coco-1"></div>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-2"></div>
+                        <div class="img-blog coco-3"></div>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <div class="img-blog-3"></div>
+                        <div class="img-blog coco-2"></div>
                     </div>
                 </div>
                 <div class="row width-50 centet-content mt-60">
